<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/coffee"
    android:orientation="vertical"
    tools:context="com.example.theeagle.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/pleas_enter_your_name"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textStyle="italic|bold" />

        <TextView
            android:id="@+id/Qun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textColor="@android:color/black"

            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/decrement"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:onClick="decrement"
                android:text="@string/dash"
                android:textColor="@android:color/black"

                />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/_0"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="italic|bold" />


            <Button
                android:id="@+id/increment"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="increment"
                android:text="@string/plus"
                android:textColor="@android:color/black"

                />
        </LinearLayout>

        <TextView
            android:id="@+id/toppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/black"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingEnd="24dp"
            android:paddingStart="24sp"
            android:text="@string/chocolate"
            android:textColor="@android:color/black"
            android:textSize="16sp"

            />


        <TextView
            android:id="@+id/pri_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/price"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/_00"
            android:textColor="@android:color/black"
            android:textSize="16sp" />


        <Button
            android:id="@+id/b_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textColor="@android:color/black" />
    </LinearLayout>
</ScrollView>
